--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ h2{
 
 h3{
     font-size: 1.4rem;
+    background-color: aqua;
 }
 
 h3{
@@ -38,3 +39,4 @@ span {
     justify-content: center;
     margin-left: 2rem;
 }
+
