--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+/* Navbar container */
+
+/* *{
+  background-color: grey;
+} */
+
 
 .navbar {
     overflow: hidden;
-    background-color:darkgreen;
+    background-color: darkblue;
     font-family: Arial;
   }
-
+  
+  /* Links inside the navbar */
   .navbar a {
     float: left;
     font-size: 16px;
@@ -14,13 +21,13 @@
     text-decoration: none;
   }
   
-
+  /* The dropdown container */
   .dropdown {
     float: left;
     overflow: hidden;
   }
   
-
+  /* Dropdown button */
   .dropdown .dropbtn {
     font-size: 16px; 
     border: none;
@@ -36,7 +43,8 @@
   .navbar a:hover, .dropdown:hover .dropbtn {
     background-color:darkblue;
   }
-
+  
+  /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
     position: absolute;
@@ -45,7 +53,8 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-
+  
+  /* Links inside the dropdown */
   .dropdown-content a {
     float: none;
     color: black;
@@ -56,16 +65,79 @@
     text-align: left;
   }
   
-  
+  /* Add a grey background color to dropdown links on hover */
   .dropdown-content a:hover {
     background-color:darkblue;
   }
   
-  
+  /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
     display: block;
   }
-
-@-ms-viewport {
+  
+  @-ms-viewport {
     width: device-width;
   }
+
+ 
+
+
+/* CSS */
+.time-stamp {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.time-stamp:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.time-stamp:hover {
+  background-color: #2c974b;
+}
+
+.time-stamp:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.time-stamp:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.time-stamp:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.name{
+  color: maroon;
+}
+
+.node{
+  color: maroon;
+}
